force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/vlocity_ps__ProgramEnrollmentDetermination__c.object-meta.xml
<CustomObject>
    <description>The Program Enrollment is used to track the participation of an individual or household in a public benefit program.</description>
    <label>Enrollment Determination</label>
    <nameField>
        <label>Program Enrollment Determination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Determinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>