force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <label>Program Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>