force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/fields/vlocity_ps__Active__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Active__c</fullName>
    <formula>IF(( CreatedDate -  vlocity_ps__MostRecentDeterminationDate__c  = 0), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>