force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/fields/vlocity_ps__EligibilityAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EligibilityAmount__c</fullName>
    <label>Eligibility Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>