force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/fields/vlocity_ps__MostRecentDeterminationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MostRecentDeterminationDate__c</fullName>
    <formula>vlocity_ps__ProgramEnrollmentId__r.vlocity_ps__MostRecentDeterminationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Determination Date</label>
    <type>DateTime</type>
</CustomField>