force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/fields/vlocity_ps__ProgramEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramEnrollmentId__c</fullName>
    <label>Program Enrollment</label>
    <referenceTo>vlocity_ps__ProgramEnrollment__c</referenceTo>
    <relationshipName>EnrollmentDetermination</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>