force-app/main/default/objects/vlocity_ps__ProgramEnrollmentDetermination__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Determination</fullName>
            </value>
            <value>
                <fullName>Scheduled Determination</fullName>
            </value>
            <value>
                <fullName>Change of Circumstances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>